[package]
name = "aprilasr-sys"
version = "0.1.0"
edition = "2021"
authors = ["VHS <vhsdev@tutanota.com>"]
license = "0BSD"
links = "aprilasr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "aprilasr_sys"

[build-dependencies]
bindgen = "0.69.2"
cmake = "0.1.50"
