[package]
name = "aprilasr-sys"
version = "0.1.0"
authors = ["VHS <vhsdev@tutanota.com>"]
edition = "2021"
links = "aprilasr"

description = "Low-level FFI bindings for the april-asr C api (libaprilasr)."
repository = "https://codeberg.org/vhs/aprilasr-sys"
keywords = ["nlp", "bindings", "wrapper", "audio", "april"]
categories = ["external-ffi-bindings", "multimedia", "text-processing"]
license = "0BSD"
readme = "README.md"

[build-dependencies]
bindgen = "0.69.2"
cmake = "0.1.50"
